tests/rosetta/out/Zig/animate-a-pendulum.error
zig build: exit status 1
/tmp/animate-a-pendulum.zig:53:20: error: unused capture
